# monpoly

./: .dockerignore  .envrc  .gitignore  .merlin  .ocamlformat  AUTHORS  CHANGES  Dockerfile  Dockerfile.ubuntu  LICENSE  Makefile  README.md  dune  dune-project  example.mfotl  example.sig  extract-ts.sh  libmonpoly.opam  monpoly  monpoly-dev.opam  monpoly-tools.opam  monpoly.opam  run.sh  verimon
.devcontainer/: Dockerfile  devcontainer.json
evaluation/: Dockerfile  Dockerfile.ubuntu  dejavu  dejavu-compile  dejavu-run  experiments.sh  verimon  verimon-old
evaluation/exp1/: dejavu  dejavu-compile  dejavu-run  experiments.sh  functions.sh  linear-past-ltl.mfotl  linear-past-ltl.qtl  linear-past.mfotl  linear.mfotl  star-past-ltl-negate.mfotl  star-past-ltl.mfotl  star-past-ltl.qtl  star-past.mfotl  triangle-past-ltl.mfotl  triangle-past-ltl.qtl  triangle-past.mfotl  triangle.mfotl
evaluation/exp2/: Makefile  P1-past-ltl.mfotl  P1-past-ltl.qtl  P3.mfotl  P4.mfotl  experiments.sh  functions.sh  synth.sig
evaluation/exp3/: Makefile  experiments.sh  functions.sh  gen_race_avg.cc  gen_race_sc.cc  gen_race_wc.cc  race.mfotl  race.qtl  synth.sig  transform_sc.cc
evaluation/exp4/: cmd.sh  experiments.sh  fmas-dejavu.sh  functions.sh  generator.sh  replayer.sh
evaluation/exp5/: cmd.sh  experiments.sh  functions.sh  table.sh
evaluation/exp6/: cmd.sh  diff-hydra.sh  diffs.sh  experiments.sh  fmas-monpoly.sh  functions.sh
examples/: P1.mfotl  P2.mfotl  P3.mfotl  rv11.mfotl  rv11.sig  rv11b.mfotl  rv11e.mfotl  signature
examples/experiments/: change_timestamps.py  csv_converter.py  dif_checker.py  experiment_runner.sh
examples/mfotl/: P1.mfotl  P2.mfotl  P3.mfotl  P4.mfotl  P4a.mfotl  complex_log.mfotl  complex_request.mfotl  complex_transactions.mfotl  ex.mfotl  json1.mfotl  json2.mfotl  json3.mfotl  json4.mfotl  json5.mfotl  json6.mfotl  rv11.mfotl
examples/scripts/: gen_log.ml  split_log.py
examples/sigs/: P1.sig  P2.sig  P3.sig  complex_log.sig  complex_request.sig  complex_transactions.sig  ex.sig  json1.sig  json2.sig  json3.sig  json4.sig  json5.sig  signature
examples/streamqre/: README  alur.mfotl  alur.sig  alur2.mfotl  alur2.sig  dependency-reduced-pom.xml  pom.xml
experiments/: dif_checker.py  runner_combine.sh  runner_resume.sh
src/: CMFOTL.ml  CMFOTL.mli  MFOTL.ml  MFOTL.mli  Makefile  aggreg.ml  aggreg.mli  algorithm.ml  algorithm.mli  algorithm_BACKUP_41260.ml  algorithm_BASE_41321.ml  algorithm_LOCAL_41260.ml  algorithm_REMOTE_41399.ml  algorithm_verified.ml  algorithm_verified.mli  db.ml  db.mli  dllist.ml  dllist.mli  domain_set.ml  domain_set.mli  dune  ext_formula.ml  ext_formula.mli  extformula.ml  extformula.mli  filter_empty_tp.ml  filter_empty_tp.mli  filter_rel.ml  filter_rel.mli  formula_generator.ml  formula_generator.mli  formula_lexer.mll  formula_parser.mly  helper.ml  helper.mli  hypercube_slicer.ml  hypercube_slicer.mli  index.html  intmap.ml  (+47 more)
src/examples/: agg.mfotl  ex.sig  letpast.mfotl  rv11.mfotl  rv11.sig
src/signatures/: dune  range.ml  signature_ast.ml  signature_ast.mli  signature_lexer.mll  signature_parser.mly  signatures.ml  signatures.mli
tests/: dune
tests/conversions.t/: conversions.sig  run.t
tests/json01.t/: json01.mfotl  json01.sig  run.t
tests/json02.t/: json02.sig  run.t
tests/let01.t/: let01.mfotl  run.t
tests/let02.t/: let02.mfotl  let02.sig  run.t
tests/let03.t/: let03_1.mfotl  run.t
tests/matches.t/: matches.sig  run.t
tests/test01.t/: run.t
tests/test02.t/: run.t
tests/test03.t/: run.t
tests/test04.t/: run.t
tests/test05.t/: run.t
tests/test06.t/: run.t
tests/test07.t/: run.t
tests/test08.t/: run.t
tests/test09.t/: run.t
tests/test10.t/: run.t
tests/test11.t/: run.t
tests/test12.t/: run.t
tests/test13.t/: run.t
tests/test14.t/: run.t
tests/test15.t/: run.t
tests/test16.t/: run.t
tests/test17.t/: run.t
tests/test18.t/: run.t
tests/test19.t/: run.t
tests/test20.t/: run.t
tests/test21.t/: run.t
tests/test22.t/: run.t
tests/test23.t/: run.t
tests/test24.t/: run.t
tests/test25.t/: run.t
tests/test26.t/: run.t
tests/test27.t/: run.t
tests/test28.t/: run.t
tests/test29.t/: run.t
tests/test30.t/: run.t  test30.sig
tests/test31.t/: run.t
tests/test32.t/: run.t
tests/test33.t/: run.t
tests/test34.t/: run.t
tests/test35.t/: run.t
thys/: Abstract_Monitor.thy  Code_Double.thy  Event_Data.thy  Examples.thy  Formula.thy  Generic_Join.thy  Generic_Join_Correctness.thy  Generic_Trace.thy  MFOTL.thy  Makefile  Monitor.thy  Monitor_Code.thy  Monitor_Impl.thy  Multi_Source.thy  Optimized_Join.thy  Optimized_MTL.thy  Partitioned_Trace.thy  ROOT  ROOTS  Regex.thy  SWA.thy  Slicing.thy  Table.thy  Trace.thy  copy_to_afp.sh
tools/: Makefile  PrioQueue.ml  compare_results.ml  count_events.ml  dune  fc_colsuf.ml  fc_filter_empty_tp.ml  fc_paramslicing.ml  formula_generator.ml  formula_generator.mli  formula_stats.ml  gen_fma.ml  gen_log.ml  join_test.ml  merger.ml  mfotl2sql.ml  mysql_test.ml  pgsql.ml  pgsql_mon.ml  precision.ml  table2log.ml  table2log.mli  transf.ml
web/: README.md  dune  main_js.ml
web/examples/: agg.sig  ex.mfotl  letpast.sig  rv11b.mfotl
(+178 files in other folders)
