(ocamllex formula_lexer log_lexer)
(ocamlyacc formula_parser)

(library
  (name libmonpoly)
  (public_name libmonpoly)
  (libraries str unix zarith)
  (modules (:standard \ Main)))

(executable
  (name main)
  (public_name monpoly)
  (package monpoly)
  (libraries libmonpoly dune-build-info)
  (modules Main))
