(include_subdirs unqualified)

(ocamllex formula_lexer log_lexer)
(ocamlyacc formula_parser)

(library
  (name libmonpoly)
  (public_name libmonpoly)
  (libraries str unix zarith yojson)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (modules (:standard \ Main)))

(executable
  (name main)
  (public_name monpoly)
  (package monpoly)
  (libraries libmonpoly dune-build-info)
  (modules Main))
